--- a/categories.html
+++ b/categories.html
@@ -81,7 +81,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
     <ul>
-        <li><a href="/category/test.html">test</a></li>
+        <li><a href="/category/new.html">new</a></li>
     </ul>
             </div>
         </div>
@@ -120,8 +120,8 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Blog powered by <a href="http://getpelican.com">Pelican</a>,
-                which takes great advantage of <a href="http://python.org">Python</a>.</p>
+                    <p class="copyright text-muted">Blog powered by <a href="https://blog.shitouboy.com/">石头Boy</a>,
+                </a></p>
                 </div>
             </div>
         </div>
