--- a/tags.html
+++ b/tags.html
@@ -80,7 +80,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-    <h1>Tags for 吾之存在，超越万物</h1>        <li><a href="/tag/test.html">test</a> (1)</li>
+    <h1>Tags for 吾之存在，超越万物</h1>        <li><a href="/tag/new.html">new</a> (1)</li>
             </div>
         </div>
     </div>
@@ -118,8 +118,8 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Blog powered by <a href="http://getpelican.com">Pelican</a>,
-                which takes great advantage of <a href="http://python.org">Python</a>.</p>
+                    <p class="copyright text-muted">Blog powered by <a href="https://blog.shitouboy.com/">石头Boy</a>,
+                </a></p>
                 </div>
             </div>
         </div>
