--- a/archives.html
+++ b/archives.html
@@ -81,8 +81,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
     <dl>
-            <dt>周三 17 五月 2017</dt>
-            <dd><a href="/blog/hello.html">HelloPelican</a></dd>
+            <dt>周六 11 一月 2020</dt>
+            <dd><a href="/blog/new.html">新博客来了！</a></dd>
         <hr>
     </dl>
             </div>
@@ -122,8 +122,8 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Blog powered by <a href="http://getpelican.com">Pelican</a>,
-                which takes great advantage of <a href="http://python.org">Python</a>.</p>
+                    <p class="copyright text-muted">Blog powered by <a href="https://blog.shitouboy.com/">石头Boy</a>,
+                </a></p>
                 </div>
             </div>
         </div>
