--- a/archives.html
+++ b/archives.html
@@ -83,6 +83,8 @@
     <dl>
             <dt>周六 11 一月 2020</dt>
             <dd><a href="/blog/new.html">新博客来了！</a></dd>
+            <dt>周六 11 一月 2020</dt>
+            <dd><a href="/blog/qunhui_1.html">群晖折腾记①-前期探索</a></dd>
         <hr>
     </dl>
             </div>
