--- a/categories.html
+++ b/categories.html
@@ -82,6 +82,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
     <ul>
         <li><a href="/category/new.html">new</a></li>
+        <li><a href="/category/zhe-teng.html">折腾</a></li>
     </ul>
             </div>
         </div>
