--- a/archives.html
+++ b/archives.html
@@ -81,6 +81,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
     <dl>
+            <dt>周日 12 一月 2020</dt>
+            <dd><a href="/blog/qunhui_2.html">群晖折腾记②-前期探索</a></dd>
             <dt>周六 11 一月 2020</dt>
             <dd><a href="/blog/new.html">新博客来了！</a></dd>
             <dt>周六 11 一月 2020</dt>
