--- a/archives.html
+++ b/archives.html
@@ -81,8 +81,12 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
     <dl>
+            <dt>周四 16 一月 2020</dt>
+            <dd><a href="/blog/IOT_think.html">IOT折腾记②-我的想法</a></dd>
             <dt>周日 12 一月 2020</dt>
-            <dd><a href="/blog/qunhui_2.html">群晖折腾记②-前期探索</a></dd>
+            <dd><a href="/blog/IOT_card.html">IOT折腾记①-卡片</a></dd>
+            <dt>周日 12 一月 2020</dt>
+            <dd><a href="/blog/qunhui_2.html">群晖折腾记②-开始折腾</a></dd>
             <dt>周六 11 一月 2020</dt>
             <dd><a href="/blog/new.html">新博客来了！</a></dd>
             <dt>周六 11 一月 2020</dt>
